# Forge

./: .gitignore  Cargo.toml  README.md  devenv.nix  forge.toml.example  verify-setup.sh
.github/: copilot-instructions.md
.github/workflows/: copilot-environment.yml
crates/forge-auth/: Cargo.toml
crates/forge-auth/src/: jwt.rs  lib.rs  middleware.rs  oidc.rs
crates/forge-config/: Cargo.toml
crates/forge-config/src/: lib.rs  loader.rs  unifier.rs  validator.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/forge-policy/: Cargo.toml
crates/forge-policy/src/: cedar.rs  compiler.rs  evaluator.rs  lib.rs
crates/forge-search/: Cargo.toml
crates/forge-search/src/: index.rs  lib.rs  query.rs  scoring.rs
crates/forge-server/: Cargo.toml
crates/forge-server/src/: config.rs  main.rs  server.rs
crates/forge-server/src/graphql/: mod.rs  query.rs
crates/forge-server/src/routes/: graphql.rs  health.rs  mod.rs  repositories.rs  static_files.rs
crates/forge-storage/: Cargo.toml
crates/forge-storage/src/: lib.rs  migrations.rs  models.rs  repository.rs
crates/forge-vcs/: Cargo.toml
crates/forge-vcs/src/: jj.rs  lib.rs  operations.rs  storage.rs
