[workspace]
members = [
    "crates/forge-server",
    "crates/forge-core",
    "crates/forge-auth",
    "crates/forge-storage",
    "crates/forge-vcs",
    "crates/forge-search",
    "crates/forge-policy",
    "crates/forge-config",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Forge Team"]
repository = "https://github.com/rawkode/Forge"

[workspace.dependencies]
# Web framework and async runtime
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "timeout"] }
hyper = "1.0"

# GraphQL
async-graphql = { version = "7.0", features = ["dataloader", "opentelemetry"] }
async-graphql-axum = "7.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
libsql = "0.4"

# Authentication
openidconnect = "3.5"
jsonwebtoken = "9.0"

# Authorization (Cedar)
cedar-policy = "4.0"

# Configuration (CUE)
# Note: CUE integration will be via CLI tool or REST API since no stable Rust bindings exist

# Search
tantivy = "0.22"

# Crypto and security
rustls = "0.23"
rustls-acme = "0.10"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.23"
opentelemetry-otlp = "0.16"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# File system and paths
walkdir = "2.4"
tempfile = "3.8"

# Async traits
async-trait = "0.1"

# Config and CLI
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.14"

# Version control (jj integration)
# Note: jj integration will be via CLI since no stable Rust API exists yet

# Document processing
# AsciiDoc processing will be handled via external tools initially

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true