[package]
name = "forge-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
forge-core = { path = "../forge-core" }

openidconnect.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
axum.workspace = true
uuid.workspace = true