[package]
name = "forge-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../forge-core" }
forge-auth = { path = "../forge-auth" }
forge-storage = { path = "../forge-storage" }
forge-vcs = { path = "../forge-vcs" }
forge-search = { path = "../forge-search" }
forge-policy = { path = "../forge-policy" }
forge-config = { path = "../forge-config" }

axum.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
config.workspace = true
rustls.workspace = true
rustls-acme.workspace = true
chrono.workspace = true
toml.workspace = true