[package]
name = "forge-vcs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
forge-core = { path = "../forge-core" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
walkdir.workspace = true
tempfile.workspace = true
sha2.workspace = true